force-app/main/default/objects/msf_QuotaModification__c/msf_QuotaModification__c.object-meta.xml
<CustomObject>
    <label>Modificación de cuota</label>
    <nameField>
        <label>Nombre de Modificación de cuota</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modificaciones de cuota</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>