force-app/main/default/objects/msf_QuotaModification__c/fields/msf_CampaignInfluence__c.field-meta.xml
<CustomField>
    <fullName>msf_CampaignInfluence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influencia de campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Modificaciones de cuota</relationshipLabel>
    <relationshipName>Modificaciones_de_cuota</relationshipName>
    <type>Lookup</type>
</CustomField>