force-app/main/default/objects/msf_QuotaModification__c/fields/msf_Canvasser__c.field-meta.xml
<CustomField>
    <fullName>msf_Canvasser__c</fullName>
    <label>Captado por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>