force-app/main/default/objects/msf_QuotaModification__c/fields/msf_ChangeAmount__c.field-meta.xml
<CustomField>
    <fullName>msf_ChangeAmount__c</fullName>
    <label>Cambio de importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>