force-app/main/default/objects/msf_QuotaModification__c/fields/msf_ChangeAnnualizedQuota__c.field-meta.xml
<CustomField>
    <fullName>msf_ChangeAnnualizedQuota__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cambio anualizado de cuota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>