force-app/main/default/objects/msf_QuotaModification__c/fields/msf_ChangeDate__c.field-meta.xml
<CustomField>
    <fullName>msf_ChangeDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha de la Modificación de cuota</label>
    <type>Date</type>
</CustomField>