force-app/main/default/objects/msf_QuotaModification__c/fields/msf_ChangeType__c.field-meta.xml
<CustomField>
    <fullName>msf_ChangeType__c</fullName>
    <label>Tipo de cambio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Inicial</label>
            </value>
            <value>
                <fullName>Increase</fullName>
                <label>Aumento</label>
            </value>
            <value>
                <fullName>Decrease</fullName>
                <label>Decremento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>