force-app/main/default/objects/msf_QuotaModification__c/fields/msf_CityCanvasser__c.field-meta.xml
<CustomField>
    <fullName>msf_CityCanvasser__c</fullName>
    <label>Captado en</label>
    <length>255</length>
    <type>Text</type>
</CustomField>