force-app/main/default/objects/msf_QuotaModification__c/fields/msf_Contact__c.field-meta.xml
<CustomField>
    <fullName>msf_Contact__c</fullName>
    <formula>IF(ISBLANK(msf_RecurringDonation__r.npe03__Contact__r.FirstName),&apos;&apos;,msf_RecurringDonation__r.npe03__Contact__r.FirstName &amp; &apos; &apos;) &amp;
msf_RecurringDonation__r.npe03__Contact__r.LastName &amp;
IF(ISBLANK(msf_RecurringDonation__r.npe03__Contact__r.Suffix),&apos;&apos;,&apos; &apos; &amp; msf_RecurringDonation__r.npe03__Contact__r.Suffix)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacto</label>
    <type>Text</type>
</CustomField>