force-app/main/default/objects/msf_QuotaModification__c/fields/msf_ContactId__c.field-meta.xml
<CustomField>
    <fullName>msf_ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Modificaciones de cuota</relationshipLabel>
    <relationshipName>msf_ContactId</relationshipName>
    <type>Lookup</type>
</CustomField>