force-app/main/default/objects/msf_QuotaModification__c/fields/msf_LeadSource1__c.field-meta.xml
<CustomField>
    <fullName>msf_LeadSource1__c</fullName>
    <label>Canal de entrada 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_LeadSource1</valueSetName>
    </valueSet>
</CustomField>