force-app/main/default/objects/msf_QuotaModification__c/fields/msf_NewAnnualizedQuota__c.field-meta.xml
<CustomField>
    <fullName>msf_NewAnnualizedQuota__c</fullName>
    <label>Nueva cuota anualizada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>