force-app/main/default/objects/msf_QuotaModification__c/fields/msf_NewRecurringPeriod__c.field-meta.xml
<CustomField>
    <fullName>msf_NewRecurringPeriod__c</fullName>
    <label>Nueva frecuencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Bimensual</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>