force-app/main/default/objects/msf_QuotaModification__c/fields/msf_PlaceCanvasser__c.field-meta.xml
<CustomField>
    <fullName>msf_PlaceCanvasser__c</fullName>
    <label>Localización del captador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>