force-app/main/default/objects/msf_QuotaModification__c/fields/msf_RecurringDonation__c.field-meta.xml
<CustomField>
    <fullName>msf_RecurringDonation__c</fullName>
    <label>Recurring Donations</label>
    <referenceTo>npe03__Recurring_Donation__c</referenceTo>
    <relationshipLabel>Modificaciones de cuota</relationshipLabel>
    <relationshipName>Modificaciones_de_cuota</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>