force-app/main/default/objects/msf_QuotaModification__c/validationRules/MSF_Not_Modify.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_Not_Modify</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp;  ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>No es posible modificar el nombre.</errorMessage>
</ValidationRule>